src/objects/ServiceAppointment.object
<CustomObject>
    <fields>
        <fullName>AcceptReject__c</fullName>
        <description>Accept or Reject a Service Appointment</description>
        <label>Accept/Reject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdditionalComments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CancellationRejectionReason__c</fullName>
        <description>Indicate why service appointment got cancelled/rejected</description>
        <inlineHelpText>Should be populated by Contractors if they rejected a Service Appointment</inlineHelpText>
        <label>Rejection Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CannotCompleteReason__c</fullName>
        <description>Updated manually or through the SFS: Service Appointment Status Transition flow. Synced with Work Orders</description>
        <label>Cannot Complete Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetName>CannotCompleteReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Add comments by DS technician team</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Appointment_Grade__c</fullName>
        <label>Appointment Grade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Auto_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Duration_In_Minutes__c</fullName>
        <formula>IF (ISBLANK(SchedStartTime), 0, (SchedEndTime - SchedStartTime)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration In Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Emergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__GanttColor__c</fullName>
        <label>Gantt Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__GanttIcon__c</fullName>
        <inlineHelpText>Enter a URL for an icon. The URL must end in an image suffix, such as .png.</inlineHelpText>
        <label>Gantt Icon</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Gantt_Display_Date__c</fullName>
        <label>Gantt Display Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSL__InJeopardyReason__c</fullName>
        <label>In Jeopardy Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delayed Start</fullName>
                </value>
                <value>
                    <fullName>Delayed Finish</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Due Date Approaching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__InJeopardy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Jeopardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__InternalSLRGeolocation__c</fullName>
        <label>Internal SLR Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__IsMultiDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MultiDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Last_Updated_Epoch__c</fullName>
        <label>Last Updated Epoch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__MDS_Calculated_length__c</fullName>
        <label>Multiday Work Calculated length</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__MDT_Operational_Time__c</fullName>
        <label>Multiday Work Operational Time</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Pinned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pinned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Related_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Service</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Schedule_Mode__c</fullName>
        <label>Schedule Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Optimization</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Schedule_over_lower_priority_appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Over Lower Priority Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Policy_Used__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduling Policy Used</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Time_Dependency__c</fullName>
        <label>Time Dependency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Start</fullName>
                </value>
                <value>
                    <fullName>Start After Finish</fullName>
                </value>
                <value>
                    <fullName>Finish Before Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__UpdatedByOptimization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdatedByOptimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Use_Async_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Async Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Virtual_Service_For_Chatter_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Service For Chatter Action (SLR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__FSK_Add_Asset_to_Maintenance_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Add the installed Asset to the account maintenance plan upon completion</inlineHelpText>
        <label>Add Asset to Account Maintenance Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__FSK_Assigned_Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the assign resource relates to the Service Appointment</description>
        <label>Assigned Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSSK__FSK_Mobile_End_Time__c</fullName>
        <label>Mobile End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSSK__FSK_Mobile_Start_Time__c</fullName>
        <label>Mobile Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSSK__FSK_Planned_Scheduled_End__c</fullName>
        <label>Planned Scheduled End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSSK__FSK_Planned_Scheduled_Start__c</fullName>
        <description>This field stores the original Scheduled Start Time</description>
        <label>Planned Scheduled Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSSK__FSK_Reject_Service_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reject Service Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__FSK_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>FSK_Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TF_AssignedToMe__c</fullName>
        <formula>IF (FSSK__FSK_Assigned_Service_Resource__r.RelatedRecordId= $User.Id ,&quot;True&quot;,&quot;False&quot;)</formula>
        <label>TF_AssignedToMe?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeType__c</fullName>
        <description>Custom picklist value that will be used to indicate if the job  that&apos;s being performed within this service appointment is chargeable or not</description>
        <label>Time Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chargeable</fullName>
                </value>
                <value>
                    <fullName>Non Chargeable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkDone__c</fullName>
        <description>This field will be used by field technicians to write what&apos;s the work they completed/done at the customer site</description>
        <label>Describe what has been done</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllServiceAppointments</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>FSSK__FSK_Work_Order__c</columns>
        <columns>WorkType</columns>
        <columns>ServiceTerritory</columns>
        <columns>FSSK__FSK_Assigned_Service_Resource__c</columns>
        <columns>SchedStartTime</columns>
        <columns>SchedEndTime</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>CreatedBy</columns>
        <filterScope>Everything</filterScope>
        <label>#All Service Appointments</label>
    </listViews>
    <listViews>
        <fullName>All_ServiceAppointments</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>FSSK__FSK_Work_Order__c</columns>
        <columns>WorkType</columns>
        <columns>ServiceTerritory</columns>
        <columns>FSSK__FSK_Assigned_Service_Resource__c</columns>
        <columns>SchedStartTime</columns>
        <columns>SchedEndTime</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>CreatedBy</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Appointments</label>
    </listViews>
    <listViews>
        <fullName>FieldServiceMobile</fullName>
        <booleanFilter>(1 OR 2 ) AND 3</booleanFilter>
        <columns>Subject</columns>
        <columns>Status</columns>
        <columns>Contact</columns>
        <columns>Name</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SchedStartTime</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <filters>
            <field>SchedStartTime</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:30</value>
        </filters>
        <filters>
            <field>TF_AssignedToMe__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <label>Field Service Mobile</label>
    </listViews>
    <listViews>
        <fullName>MyServiceAppointments</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>FSSK__FSK_Work_Order__c</columns>
        <columns>WorkType</columns>
        <columns>FSSK__FSK_Assigned_Service_Resource__c</columns>
        <columns>Status</columns>
        <columns>SchedStartTime</columns>
        <columns>SchedEndTime</columns>
        <columns>CreatedDate</columns>
        <columns>CreatedBy</columns>
        <filterScope>Mine</filterScope>
        <label># My Service Appointments</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceAppointments</fullName>
        <filterScope>Mine</filterScope>
        <label>My Service Appointments</label>
    </listViews>
    <listViews>
        <fullName>SoftwareHelpDeskSA</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>FSSK__FSK_Work_Order__c</columns>
        <columns>WorkType</columns>
        <columns>FSSK__FSK_Assigned_Service_Resource__c</columns>
        <columns>SchedStartTime</columns>
        <columns>SchedEndTime</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>CreatedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ServiceTerritory</field>
            <operation>equals</operation>
            <value>AU: Software HelpDesk</value>
        </filters>
        <label># Software HelpDesk SA</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FSL__Dont_allow_scheduled_or_dispatched</fullName>
        <active>true</active>
        <description>Don&apos;t allow creation of service with status scheduled or  dispatched</description>
        <errorConditionFormula>AND($Setup.FSL__Service_Creation_Validation_Rules__c.FSL__Service_Creation_Status_Validation__c,AND(ISNEW(),(OR(ISPICKVAL(StatusCategory, &quot;Scheduled&quot;),ISPICKVAL(StatusCategory, &quot;Dispatched&quot;)))))</errorConditionFormula>
        <errorMessage>New service appointment cannot be created in scheduled or  dispatched statuses.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Related_Service_with_time_dependency</fullName>
        <active>true</active>
        <description>If related service is not empty then time dependency is not empty</description>
        <errorConditionFormula>( !ISBLANK(FSL__Related_Service__c) &amp;&amp; ( ISBLANK(TEXT(FSL__Time_Dependency__c)) &amp;&amp; !FSL__Same_Day__c &amp;&amp; !FSL__Same_Resource__c ) )</errorConditionFormula>
        <errorMessage>Select a valid dependency type. If the appointments must be assigned to the same resource, the dependency type can’t be Same Start.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Same_Resource_Same_Start</fullName>
        <active>true</active>
        <description>Can&apos;t be same start and same reosurce</description>
        <errorConditionFormula>TEXT(FSL__Time_Dependency__c) = &quot;Same Start&quot; &amp;&amp; FSL__Same_Resource__c</errorConditionFormula>
        <errorMessage>Resource dependency is invalid. Time Dependency can&apos;t be Same Start when same resource is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Schedule_End_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(SchedEndTime) &amp;&amp; NOT(ISNULL(SchedStartTime))</errorConditionFormula>
        <errorDisplayField>SchedEndTime</errorDisplayField>
        <errorMessage>Both scheduled start and end are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Schedule_Start_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(SchedStartTime) &amp;&amp; NOT(ISNULL(SchedEndTime))</errorConditionFormula>
        <errorDisplayField>SchedStartTime</errorDisplayField>
        <errorMessage>Both scheduled start and end are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Service_Color_HEX_Format</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISBLANK(FSL__GanttColor__c)) &amp;&amp; (NOT(REGEX(FSL__GanttColor__c, &quot;#[a-fA-F0-9]{6}&quot;)))</errorConditionFormula>
        <errorDisplayField>FSL__GanttColor__c</errorDisplayField>
        <errorMessage>Gantt color must be in hexadecimal format: (for example: #ffffff)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Time_dependency_with_related_service</fullName>
        <active>true</active>
        <errorConditionFormula>( ISBLANK(FSL__Related_Service__c) &amp;&amp; ( !ISBLANK(TEXT(FSL__Time_Dependency__c)) ||  FSL__Same_Day__c || FSL__Same_Resource__c ) )</errorConditionFormula>
        <errorDisplayField>FSL__Related_Service__c</errorDisplayField>
        <errorMessage>Please select Related Service.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isDueDateExist</fullName>
        <active>false</active>
        <description>Check if DueDate field exist on service appointment.</description>
        <errorConditionFormula>ISNULL(  DueDate )</errorConditionFormula>
        <errorDisplayField>DueDate</errorDisplayField>
        <errorMessage>DueDate field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isDurationExist</fullName>
        <active>true</active>
        <description>Check if Duration field exist on service appointment.</description>
        <errorConditionFormula>ISNULL(Duration)</errorConditionFormula>
        <errorDisplayField>Duration</errorDisplayField>
        <errorMessage>Duration field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isEarliestStartTimeExist</fullName>
        <active>false</active>
        <description>Check if EarliestStartTime field exist on service appointment.</description>
        <errorConditionFormula>ISNULL( EarliestStartTime )</errorConditionFormula>
        <errorDisplayField>EarliestStartTime</errorDisplayField>
        <errorMessage>EarliestStartTime field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__startTimeShouldPrecedeEndTime</fullName>
        <active>false</active>
        <errorConditionFormula>SchedEndTime &lt;=  SchedStartTime</errorConditionFormula>
        <errorDisplayField>SchedStartTime</errorDisplayField>
        <errorMessage>The Scheduled Start must be earlier than the Scheduled End.</errorMessage>
    </validationRules>
</CustomObject>